--- a/index.html
+++ b/index.html
@@ -67,12 +67,12 @@
   </header>
   <main>
     <p class="description">
-      Un podcast sobre tecnología, cultura digital y nuestras conexiones (o desconexiones) con el mundo.
+      Un podcast trasnochado.
     </p>
     <div class="buttons">
       <a href="https://podcasts.apple.com/es/podcast/error-de-conexi%C3%B3n/id762715436s">Apple Podcasts</a>
       <a href="https://open.spotify.com/show/0IVJbSXCqgwcxNm9idQG0d?si=1c1ee4fb19a34100">Spotify</a>
-      <a href="https://errordeconexion.s3.us-east-1.amazonaws.com/feed.xml">RSS</a>
+      <a href="https://feeds.feedburner.com/edcpodcast">RSS</a>
     </div>
   </main>
   <footer>
